@@ -144,6 +144,19 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
+	
+                    <!-- jdk.crypto.cryptoki : SunPKCS11 -->
+                    <compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>jdk.crypto.cryptoki</arg>
+						
+						<arg>--add-exports</arg>
+						<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>		
+												
+						<!-- Reflection at runtime -->
+						<arg>--add-opens</arg>
+						<arg>jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
